# routes/api.php
@@ -29,6 +29,8 @@ Route::prefix('v1')->group(function () {
     Route::middleware('auth:sanctum')->group(function () {
         Route::post('/logout', [AuthController::class, 'logout']);
         Route::get('/user', [AuthController::class, 'user']);
+        Route::get('/all/users', [AuthController::class, 'index']);
+        Route::get('/users/{id}', [AuthController::class, 'show']);
     });
     
     // Protected routes
